c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_lex/bad_exponent_suffix.c
int main(void)
{
    double foo = 1E2x;
}